--- a/style.css
+++ b/style.css
@@ -6,9 +6,13 @@ button{
     font-size: large;
     border-radius: 50px;
     font-weight: bold;
+  
+}
+h1{color: red;
+
     
 }
-body {
+body{
     background: linear-gradient(skyblue, lightgreen);
     background-image: url(subory/sano.png);
     background-repeat: no-repeat;
@@ -30,4 +34,5 @@ body {
     font-size: 22px;
     margin-left: auto;
     margin-right: auto;
+
 }
